tests/ui/async-await/in-trait/async-generics.current.stderr
error[E0311]: the parameter type `U` may not live long enough
  --> $DIR/async-generics.rs:11:28
   |
LL |     async fn foo(&self) -> &(T, U);
   |                            ^^^^^^^
   |
note: the parameter type `U` must be valid for the anonymous lifetime defined here...
  --> $DIR/async-generics.rs:11:18
   |
LL |     async fn foo(&self) -> &(T, U);
   |                  ^^^^^
note: ...so that the reference type `&(T, U)` does not outlive the data it points at
  --> $DIR/async-generics.rs:11:28
   |
LL |     async fn foo(&self) -> &(T, U);
   |                            ^^^^^^^

error[E0311]: the parameter type `T` may not live long enough
  --> $DIR/async-generics.rs:11:28
   |
LL |     async fn foo(&self) -> &(T, U);
   |                            ^^^^^^^
   |
note: the parameter type `T` must be valid for the anonymous lifetime defined here...
  --> $DIR/async-generics.rs:11:18
   |
LL |     async fn foo(&self) -> &(T, U);
   |                  ^^^^^
note: ...so that the reference type `&(T, U)` does not outlive the data it points at
  --> $DIR/async-generics.rs:11:28
   |
LL |     async fn foo(&self) -> &(T, U);
   |                            ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0311`.
